fixed some responsive elements on small screens

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ nav {
 #small-screen-logo {
     color:#F7A797;
     display: none;
+    font-family: 'Fredoka', sans-serif;
 }
 
 nav ul{
@@ -237,6 +238,7 @@ h2 {
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
+    width: 100%;
 }
 
 .about-page-left {
@@ -267,20 +269,28 @@ h2 {
     position: relative;
 }
 
-.about-me-info {
+.aboutme-container {
+    /* height: 60rem; */
     display: flex;
+    min-width: 25rem;
     background-color: #F7A797;
-    height: 20rem;
     border-radius: 3rem;
-    flex-grow: 3;
-    width: 30rem;
-    flex-direction: column;
+    margin: 1rem;
+    text-align: center;
+    padding-bottom: 2rem;
+    padding: 1rem;
+    flex-grow: 1;
+    flex-shrink: 1;
+    max-width: 50rem;
 }
 
-.about-me-info p {
-    padding:0;
-    margin: 1rem;
+@media only screen and (max-width:860px) {
+    .aboutme-container {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
+
 
 .about-me-text {
     margin: 2rem;
@@ -365,6 +375,28 @@ p {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    flex-grow: 1;
+    flex-shrink: 1;
+    max-width: 80rem;
+    min-width: 25rem;
+}
+
+@media only screen and (max-width:860px) {
+    .certifications-container {
+        margin: 1rem;
+        max-width: 25rem;
+    }
+    .certifications-text {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        min-width:20rem;
+        margin: 0rem 1rem;
+    }
+    .progress-bar {
+        max-width: 25rem;
+        flex-shrink: 1;
+    }
 }
 
 .certificate-icon {
@@ -386,6 +418,7 @@ p {
     text-align: center;
     align-self: flex-start;
     letter-spacing: normal;
+    padding: 0;
 }
 
 .codecademy ul, .CFG ul {
@@ -686,15 +719,8 @@ footer {
     justify-content: space-around;
 }
 
-@media only screen and (max-width:860px) {
-    footer {
-        position: relative;
-        top: 30rem;
-    }
-}
-
 .footer-left {
-    width: 50%
+    width: 30%
 }
 
 /* .footer-middle {
@@ -714,7 +740,7 @@ footer {
     flex-direction: column;
     padding: 1rem 2rem;
     text-align: right;
-    width: 50%
+    width: 70%
 }
 
 .footer-nav {
@@ -723,10 +749,8 @@ footer {
 }
 
 .by-melissa {
-    text-align: right;
     display: flex;
     justify-content: flex-end;
-    padding: 0rem 1.5rem;
 }
 
 a {
@@ -734,4 +758,22 @@ a {
     padding: 0.5rem 1.5rem;
     color: white;
     font-size: 1rem;
+}
+
+
+@media only screen and (max-width:860px) {
+    footer {
+        position: relative;
+        top: 30rem;
+    }
+    .footer-right {
+        text-align: right;
+    }
+    .footer-nav {
+        flex-wrap: wrap;
+    }
+    .footer-nav a {
+        margin: 0;
+        padding: 0.2;
+    }
 }
